# pywire

./: .gitignore  .pre-commit-config.yaml  BINDING_STRATEGY.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  VERSIONING.md  codecov.yml  deny.toml  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  upstream-tracker.yml
docs/: api.md  concepts.md  contributing.md  index.md  install.md  quickstart.md  releasing.md  requirements.txt  versioning.md
docs/api/: auth.md  errors.md  messages.md  query.md  server.md
pywire/: __init__.py  _pywire.pyi  auth.py  auth.pyi  copy.py  copy.pyi  errors.py  errors.pyi  messages.py  messages.pyi  query.py  query.pyi  server.py  server.pyi  sync.py  sync.pyi
scripts/: check_pgwire_release.py  coverage.sh
src/: auth.rs  errors.rs  lib.rs  messages.rs  query.rs  runtime.rs  server.rs
tests/: test_auth.py  test_bindings.py  test_copy.py  test_errors.py  test_messages.py  test_query.py  test_runtime.py  test_server.py  test_sync.py
