[package]
name = "pywire"
version = "0.1.0"
edition = "2021"

[lib]
name = "pywire"
crate-type = ["cdylib"]

[dependencies]
pgwire = { version = "0.40.0", default-features = false }
pyo3 = { version = "0.28.3", features = ["abi3-py39"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
