[package]
name = "pywire"
version = "0.41.0"
edition = "2021"

[lib]
name = "pywire"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
pgwire = { version = "0.40.0", default-features = false, features = ["server-api"] }
postgres-types = "0.2"
pyo3 = { version = "0.28.3", features = ["abi3-py311"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
