[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pywire"
version = "0.1.0"
description = "Python bindings for the Rust pgwire library"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "ruff", "maturin>=1.8,<2.0"]

[tool.maturin]
python-source = "."
module-name = "pywire._pywire"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["target"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
