[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pywire"
version = "0.40.0"
description = "Python bindings for the Rust pgwire library"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "hypothesis",
  "ruff",
  "mypy",
  "maturin>=1.8,<2.0",
]

[tool.maturin]
python-source = "."
module-name = "pywire._pywire"
features = ["pyo3/extension-module"]
include = [{ path = "pywire/py.typed", format = "wheel" }, { path = "pywire/_pywire.pyi", format = "wheel" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pywire --cov-report=term-missing --cov-report=xml:python-cov.xml"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["pywire"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
show_missing = true
fail_under = 100

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["target"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["pywire", "tests", "scripts"]
exclude = "target/"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "hypothesis"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true
